[package]
name = "swtpm-test"
version = "0.1.0"
edition = "2021"
authors = ["Arthur Gautier <baloo@superbaloo.net>"]
description = """
Set of macros to start and stop swtpm for tests
"""
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.10.1"
tss-esapi = { git = "https://github.com/parallaxsecond/rust-tss-esapi.git", features = ["generate-bindings"] }

swtpm-test-macros = { path = "../swtpm-test-macros" }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt", "rt-multi-thread"] }
